# hyper-spec-core

./: .gitignore  AGENTS.md  README.md  adapter.py  codex.lock.json  codex.manifest.yaml  hyper_spec.py  project_hyper_spec.md  pyproject.toml  weaverGovernance.md
.codex/: architecture.md  catalog-commit.txt  process.md  security.md  stack.yaml
.codex/fragments/: architecture-core@1.0.0.yaml  base@1.0.0.yaml  process-core@1.0.0.yaml  security-core@1.0.0.yaml  stack-core@1.0.0.yaml
.codex/standards/: agents.md  architecture.md  process.md  security.md
.github/: copilot-instructions.md
specs/.constitution/: rules.md
specs/.templates/: plan_template.md  spec_template.md
specs/test-feature/: plan.md  spec.md
src/hyper_spec_core/: __init__.py  cli.py
src/hyper_spec_core/templates/: __init__.py  plan_template.md  spec_template.md
tests/: __init__.py  test_adapter.py  test_cli.py
