[project]
name = "hyper-spec-core"
version = "2.0.0"
description = "Integrated Spec-Driven Development Environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",     # CLI Framework with Rich integration
    "pydantic>=2.5.0",       # Data validation and structural enforcement
    "jinja2>=3.1.0",         # Template engine for generating specs
    "rich>=13.0.0",          # Terminal UI (tables, colors, progress)
    "openai>=1.0.0",         # AI Client (configurable provider)
    "pyyaml>=6.0",           # Configuration parsing
    "instructor>=1.0.0",     # Structured output patch for OpenAI
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["specs", ".vscode", "task.md", "implementation_plan.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
